# oscars

./: Cargo.toml  LICENSE  README.md  mise.toml
oscars/: Cargo.toml
oscars/benches/: arena2_vs_arena3.rs  arena2_vs_boa_gc.rs  arena2_vs_mempool3.rs  arena3_alloc.rs  oscars_vs_boa_gc.rs
oscars/examples/: api_prototype.rs  mempool4_demo.rs
oscars/examples/api_prototype/: cell.rs  gc.rs  main.rs  root_list.rs  trace.rs  weak.rs
oscars/examples/api_prototype/tests/ui/: gc_cannot_escape_mutate.rs  gc_cannot_escape_mutate.stderr  gc_cannot_store_outer_scope.rs  gc_cannot_store_outer_scope.stderr  root_cross_context.rs  root_cross_context.stderr  scoped_root_cannot_cross_context.rs  scoped_root_cannot_cross_context.stderr  scoped_root_cannot_escape_mutate.rs  scoped_root_cannot_escape_mutate.stderr
oscars/src/: collector.rs  lib.rs
oscars/src/alloc/: gc_allocator.rs  mod.rs
oscars/src/alloc/arena/: boxed.rs  finalize.rs
oscars/src/alloc/arena2/: alloc.rs  mod.rs  tests.rs
oscars/src/alloc/arena3/: alloc.rs  mod.rs  tests.rs
oscars/src/alloc/mempool3/: alloc.rs  mod.rs  tests.rs
oscars/src/alloc/mempool4/: mod.rs  ptr.rs  serialize.rs  tests.rs
oscars/src/collectors/: collector.rs  common.rs  mod.rs
oscars/src/collectors/mark_sweep/: README.md  cell.rs  gc_collections.rs  mod.rs  tests.rs  trace.rs
oscars/src/collectors/mark_sweep/internals/: ephemeron.rs  gc_box.rs  gc_header.rs  mod.rs  vtable.rs
oscars/src/collectors/mark_sweep/pointers/: gc.rs  mod.rs  weak.rs  weak_map.rs
oscars/src/collectors/mark_sweep_arena2/: README.md  cell.rs  mod.rs  tests.rs  trace.rs
oscars/src/collectors/mark_sweep_arena2/internals/: ephemeron.rs  gc_box.rs  gc_header.rs  mod.rs  vtable.rs
oscars/src/collectors/mark_sweep_arena2/pointers/: gc.rs  weak.rs  weak_map.rs
oscars/src/collectors/mark_sweep_branded/: cell.rs  ephemeron.rs  gc.rs  gc_box.rs  mod.rs  mutation_ctx.rs  root.rs  root_link.rs  trace.rs  weak.rs
oscars/src/collectors/mark_sweep_branded/tests/: api_compliance.rs  ephemeron.rs  mod.rs  (+2 more)
oscars/src/collectors/null_collector/: mod.rs  tests.rs
oscars/src/collectors/null_collector_branded/: cell.rs  ephemeron.rs  gc.rs  gc_box.rs  mod.rs  mutation_ctx.rs  root.rs  trace.rs  weak.rs
oscars/tests/: thread_safety.rs
oscars_derive/: Cargo.toml
oscars_derive/src/: lib.rs  mark_sweep_branded.rs
(+64 files in other folders)
