[package]
name = "oscars"
version = "0.1.0"
edition = "2024"

[dependencies]
allocator-api2 = { version = "0.4.0", optional = true }
hashbrown = "0.16.1"
oscars_derive = { path = "../oscars_derive", version = "0.1.0" }

[features]
default = ["mark_sweep"]
std = []
mark_sweep = []
gc_allocator = ["dep:allocator-api2", "mark_sweep"]
