[package]
name = "oscars"
version = "0.1.0"
edition = "2024"

[dependencies]
allocator-api2 = { version = "0.4.0", optional = true }
hashbrown = "0.16.1"
oscars_derive = { path = "../oscars_derive", version = "0.1.0" }
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

boa_gc = { git = "https://github.com/boa-dev/boa", branch = "main" }

[[bench]]
name = "oscars_vs_boa_gc"
harness = false
required-features = ["gc_allocator"]

[[bench]]
name = "arena2_vs_mempool3"
harness = false

[features]
default = ["mark_sweep"]
std = []
mark_sweep = []
gc_allocator = ["dep:allocator-api2", "mark_sweep"]
