[package]
name = "oscars"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.16.1"
oscars_derive = { path = "../oscars_derive", version = "0.1.0" }
rustc-hash = "2.1.1"
thin-vec = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
trybuild = "1.0"

boa_gc = { git = "https://github.com/boa-dev/boa", branch = "main" }

[[bench]]
name = "oscars_vs_boa_gc"
harness = false
required-features = ["mark_sweep"]

[[bench]]
name = "arena2_vs_mempool3"
harness = false

[[bench]]
name = "arena2_vs_boa_gc"
harness = false

[features]
default = ["mark_sweep"]
std = []
mark_sweep = []
mark_sweep2 = ["mark_sweep"]
thin-vec = ["dep:thin-vec", "mark_sweep"]
